tests/machine/x/kotlin/values_builtin.error
line 63:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/values_builtin.kt:63:13: error: unresolved reference: values
    println(values(m))
            ^

 62:     val m = mutableMapOf("a" to 1, "b" to 2, "c" to 3)
 63:     println(values(m))
 64: }
